css/main.css
:root {
    --nav-border-color: #35367C;
    --nav-background-color: #35367C;
    --nav-admin-link-color: #c0c9c0;
    --mobile-menu-background: #333;
    --default-font-color: #f1f1f1;
}

html {
    background-image: url(../img/ep_naturalblack.png);
    background-attachment: fixed;
    background-position: center;
    background-repeat: repeat;
}

body {
    margin: 0 auto;
    min-height: 100vh;
    max-width: 1024px;
    display: grid;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: var(--default-font-color);
}

header {
    grid-area: header;
    margin: 0 auto;
}

header>img {
    width: 100%;
    height: auto;
}

header section {
    margin-top: 10px;
}

header section ul {
    list-style-type: none;
    max-width: 1024px;
    width: 100%;
    margin: 0 auto;
    padding: 0px;
    display: flex;
    justify-content: flex-end;
    margin-bottom: 1em;
}

header section ul li {
    margin: 0 .5em;
}

header section ul li a img {
    width: 100%;
}

aside {
    grid-area: aside;
    width: 10vw;
}

main {
    grid-area: main;
    text-justify: justify;
}

main p {
    width: 100%;
}

footer {
    grid-area: footer;
    margin: 0 auto;
    font-size: 0.9rem;
}

@media (min-width: 1201px) {
    body {
        background-image: url(../img/fairly%20bg.png);
        background-repeat: no-repeat;
        background-position: center;
        background-attachment: fixed;
        grid-column-gap: 2rem;
        grid-template-rows: auto 1fr auto;
        grid-template-areas:
            'header header header'
            'aside  main   main'
            'footer footer footer';
    }

    nav {
        display: grid;
        padding-top: 1rem;
    }

    nav a.navlink {
        text-decoration: none;
        margin: 5px auto;
        width: 100%;
        border-width: 1px;
        border-style: solid;
        border-color: var(--nav-border-color);
        padding: 5px;
        text-align: center;
        border-radius: 6px;
    }

    nav a.navlink:hover {
        background-color: var(--nav-background-color);
        color: var(--default-font-color);
    }

    nav a.admin {
        background-color: var(--nav-admin-link-color);
    }

    nav a.admin:hover {
        background-color: var(--nav-admin-link-color);
    }
}

@media (max-width: 1200px) {
    body {
        grid-template-rows: auto 1fr auto auto;
        grid-template-areas:
            'header'
            'main'
            'footer'
            'aside';
        margin-bottom: 3rem;
    }

    main {
        margin: 0 8px;
    }

    footer {
        display: none;
    }

    nav section {
        display: none;
    }

    nav {
        background-color: var(--mobile-menu-background);
        overflow: hidden;
        position: fixed;
        display: flex;
        bottom: 0;
        width: 100%;
        height: 3rem;
        line-height: 2.8rem;
        color: var(--default-font-color);
        padding: 0 10px;
    }

    nav a {
        color: var(--default-font-color);
        display: block;
        float: left;
        height: 100%;
        text-align: center;
        text-decoration: none;
        flex: 1;
    }

    nav a.admin {
        display: none;
    }
}

